# aira-playground

image-poc/: .gitignore  LATEST.bak  PRD.md  README.md  config.example.yaml  pyproject.toml
image-poc/cardnews/: __init__.py  cli.py  config.py  figma.py  gemini.py  image.py  io.py
image-poc/scripts/: run_brand_card.sh
